Refactor CORS configuration and update permissions